--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,14 @@ group = 'hello'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+// 롬복 설정 추가 시작
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+// 롬복 설정 추가 끝
+
 repositories {
     mavenCentral()
 }
@@ -15,6 +23,14 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // 롬복 >> preference 에서 annotation processors > enable annotation process 키기.
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+    // 롬복 end
 }
 
 tasks.named('test') {
