--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    // DL >> Provider 제공 라이브러리(자바)
+    implementation 'javax.inject:javax.inject:1'
+
     // 롬복 >> preference 에서 annotation processors > enable annotation process 키기.
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
